# Attestor

./: .gitignore  MASTER_PLAN.md  README.md  attestor_manifesto.docx  cdm_gap_completion_summary.md  cdm_gap_review.md  demo_nvda_option_trade.py  pyproject.toml  structured_derivatives_workflow.md
_rosetta_alignment/: TRACKER.md  ns02_party.md  ns03_math.md  ns04_observable.md  ns05_product.md  ns06_settlement.md  ns07_event.md
phase0_plan/: COMPLETION_FINOPS.md  COMPLETION_FORMALIS.md  COMPLETION_GATHERAL.md  COMPLETION_GEOHOT.md  COMPLETION_LATTNER.md  COMPLETION_MINSKY.md  COMPLETION_TESTS.md  PASS2_REVIEW.md  PASS3_REVIEW.md  PASS4_FINAL.md  PHASE0_EXECUTION.md  PLAN.md
phase1_plan/: COMPLETION_FINOPS.md  COMPLETION_FORMALIS.md  COMPLETION_GATHERAL.md  COMPLETION_GEOHOT.md  COMPLETION_LATTNER.md  COMPLETION_MINSKY.md  COMPLETION_TESTS.md  PLAN.md
phase2_plan/: PLAN.md  REVIEW.md
phase3_plan/: PLAN.md  REVIEW.md
phase4_plan/: BUILD_SEQUENCE.md  CONSENSUS.md  FINOPS_SPEC.md  PLAN.md  REVIEW.md
phase5_plan/: PLAN.md  REVIEW.md
sql/: 001_attestations.sql  002_event_log.sql  003_schema_registry.sql  004_accounts.sql  005_positions.sql  006_transactions.sql  007_orders.sql  008_emir_reports.sql  009_market_data.sql  010_margin_events.sql  011_gl_projection.sql  012_reports_mifid2.sql  013_yield_curves.sql  014_fx_rates.sql  015_model_configs.sql  016_calibration_failures.sql  017_cashflows.sql  018_vol_surfaces.sql  019_credit_curves.sql  020_collateral_balances.sql  021_credit_events.sql
tests/: conftest.py  test_arbitrage_gates.py  test_asset.py  (+86 more)
(+68 files in other folders)
