[project]
name = "attestor"
version = "0.1.0"
description = "Attestor -- attestation-first cross-asset trading platform"
requires-python = ">=3.12"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.coverage.run]
source = ["attestor"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
